# LCEMP-backup

./: .gitignore  .gitmodules  CMakeLists.txt  MinecraftConsoles.sln  README.md
.github/workflows/: build-channel.yml
Minecraft.Client/: AbstractContainerScreen.cpp  AbstractTexturePack.cpp  AchievementScreen.cpp  ArchiveFile.cpp  ArrowRenderer.cpp  BlazeModel.cpp  BlazeRenderer.cpp  BoatRenderer.cpp  BookModel.cpp  BufferedImage.cpp  Camera.cpp  ChatScreen.cpp  ChestRenderer.cpp  ChickenModel.cpp  ChickenRenderer.cpp  Chunk.cpp  Chunk.h  ClientConnection.cpp  ClientConnection.h  ClockTexture.cpp  CompassTexture.cpp  CreateWorldScreen.cpp  CreativeMode.cpp  CreeperModel.cpp  CreeperRenderer.cpp  DLCTexturePack.cpp  DeathScreen.cpp  DemoLevel.h  DemoMode.cpp  DragonModel.cpp  EnchantTableRenderer.cpp  EnderChestRenderer.cpp  EnderCrystalRenderer.cpp  EnderDragonRenderer.cpp  EndermanRenderer.cpp  EntityRenderDispatcher.cpp  EntityRenderDispatcher.h  EntityRenderer.cpp  EntityTracker.cpp  EntityTracker.h  (+127 more)
Minecraft.Client/Common/: App_Defines.h  App_enums.h  App_structs.h  Console_Utils.cpp  Consoles_App.cpp  Consoles_App.h
Minecraft.Client/Common/Audio/: Consoles_SoundEngine.h  SoundEngine.cpp  SoundEngine.h
Minecraft.Client/Common/Colours/: ColourTable.cpp
Minecraft.Client/Common/DLC/: DLCAudioFile.cpp  DLCManager.cpp  DLCPack.cpp  DLCSkinFile.cpp
Minecraft.Client/Common/GameRules/: AddEnchantmentRuleDefinition.cpp  AddItemRuleDefinition.cpp  ApplySchematicRuleDefinition.cpp  BiomeOverride.cpp  CollectItemRuleDefinition.cpp  CompleteAllRuleDefinition.cpp  CompoundGameRuleDefinition.cpp  ConsoleGenerateStructure.cpp  ConsoleGenerateStructure.h  ConsoleSchematicFile.cpp  ConsoleSchematicFile.h  GameRuleDefinition.cpp  GameRuleManager.cpp  LevelGenerationOptions.cpp  LevelGenerationOptions.h  NamedAreaRuleDefinition.cpp  StartFeature.cpp  UpdatePlayerRuleDefinition.cpp  UseTileRuleDefinition.cpp  XboxStructureActionGenerateBox.cpp  XboxStructureActionPlaceBlock.cpp  XboxStructureActionPlaceContainer.cpp  XboxStructureActionPlaceSpawner.cpp
Minecraft.Client/Common/Network/: GameNetworkManager.cpp  GameNetworkManager.h  PlatformNetworkManagerStub.cpp  PlatformNetworkManagerStub.h  SessionInfo.h
Minecraft.Client/Common/Telemetry/: TelemetryManager.cpp
Minecraft.Client/Common/Tutorial/: ChoiceTask.cpp  ControllerTask.cpp  FullTutorial.cpp  InfoTask.cpp  Tutorial.cpp
Minecraft.Client/Common/UI/: IUIScene_AbstractContainerMenu.cpp  IUIScene_CraftingMenu.cpp  IUIScene_CraftingMenu.h  IUIScene_CreativeMenu.cpp  IUIScene_CreativeMenu.h  IUIScene_PauseMenu.cpp  IUIScene_TradingMenu.cpp  UIComponent_Chat.cpp  UIComponent_Panorama.cpp  UIComponent_PressStartToPlay.cpp  UIComponent_TutorialPopup.cpp  UIControl.cpp  UIControl_Base.cpp  UIControl_EnchantmentBook.cpp  UIControl_LeaderboardList.cpp  UIControl_LeaderboardList.h  UIControl_MinecraftPlayer.cpp  UIControl_PlayerSkinPreview.cpp  UIController.cpp  UIController.h  UIScene.cpp  UIScene_AbstractContainerMenu.cpp  UIScene_AnvilMenu.cpp  UIScene_ConnectingProgress.cpp  UIScene_ControlsMenu.cpp  UIScene_CraftingMenu.cpp  UIScene_CreateWorldMenu.cpp  UIScene_CreativeMenu.cpp  UIScene_Credits.h  UIScene_DLCMainMenu.cpp  UIScene_DLCOffersMenu.cpp  UIScene_DeathMenu.cpp  UIScene_DebugCreateSchematic.cpp  UIScene_DebugCreateSchematic.h  UIScene_DebugOverlay.cpp  UIScene_DebugSetCamera.cpp  UIScene_DebugSetCamera.h  UIScene_EndPoem.cpp  UIScene_FullscreenProgress.cpp  UIScene_HUD.cpp  (+25 more)
Minecraft.Client/Common/XUI/: XUI_ConnectingProgress.cpp  XUI_Ctrl_4JEdit.cpp  XUI_Ctrl_EnchantmentButtonText.cpp  XUI_Ctrl_MinecraftSkinPreview.cpp  XUI_Ctrl_SlotItemCtrlBase.cpp  XUI_DLCOffers.h  XUI_DebugOverlay.cpp  XUI_DebugSetCamera.cpp  XUI_FullscreenProgress.cpp  XUI_FullscreenProgress.h  XUI_InGameInfo.h  XUI_InGamePlayerOptions.cpp  XUI_Intro.cpp  XUI_Intro.h  XUI_Leaderboards.h  XUI_LoadSettings.h  XUI_MainMenu.h  XUI_MultiGameCreate.cpp  XUI_MultiGameInfo.cpp  XUI_MultiGameJoinLoad.cpp  XUI_PauseMenu.cpp  XUI_PauseMenu.h  XUI_Scene_AbstractContainer.cpp  XUI_Scene_Base.cpp  XUI_Scene_Base.h  XUI_Scene_Enchant.cpp  XUI_Scene_Inventory.cpp  XUI_Scene_Inventory_Creative.cpp  XUI_Scene_Trading.cpp  XUI_Scene_Win.cpp  XUI_SettingsAll.h  XUI_SettingsOptions.h  XUI_SettingsUI.h  XUI_SkinSelect.h  XUI_TextEntry.cpp
Minecraft.Client/Durango/: Durango_App.cpp  Durango_Minecraft.cpp
Minecraft.Client/Durango/Leaderboards/: DurangoLeaderboardManager.cpp
Minecraft.Client/Durango/Network/: DQRNetworkManager.cpp  DQRNetworkManager.h  PlatformNetworkManagerDurango.cpp
Minecraft.Client/Durango/XML/: ATGXmlParser.cpp
Minecraft.Client/Orbis/: Orbis_App.cpp  Orbis_Minecraft.cpp  user_malloc.cpp
Minecraft.Client/Orbis/Leaderboards/: OrbisLeaderboardManager.cpp
Minecraft.Client/PS3/: PS3_App.cpp  PS3_Minecraft.cpp  Xbox_Minecraft.cpp
Minecraft.Client/PSVita/: PSVita_App.cpp  PSVita_App.h  PSVita_Minecraft.cpp
Minecraft.Client/Platform_Libs/: .gitignore  README.md
Minecraft.Client/Windows64/: GammaPostProcessPS.h  GammaPostProcessVS.h  KBMConfig.cpp  KBMConfig.h  Windows64_App.cpp  Windows64_Minecraft.cpp  Windows64_PostProcess.cpp  Windows64_UIController.cpp
Minecraft.Client/Windows64Media/: strings.h
Minecraft.Client/Xbox/: Xbox_App.cpp  Xbox_Minecraft.cpp
Minecraft.World/: ArmorItem.cpp  Biome.cpp  BiomeCache.h  BiomeSource.cpp  Blaze.cpp  BucketItem.cpp  C4JThread.cpp  CauldronTile.cpp  CaveSpider.cpp  Chicken.cpp  CompressedTileStorage.cpp  Connection.cpp  Connection.h  ConsoleSaveFileOriginal.cpp  ConsoleSaveFileSplit.cpp  ContainerMenu.cpp  ControlledByPlayerGoal.h  Cow.cpp  Creeper.cpp  Dimension.cpp  DirectoryLevelStorage.cpp  DisconnectPacket.h  DurangoStats.cpp  EnchantItemCommand.cpp  EnchantmentMenu.cpp  EnderDragon.cpp  EnderMan.cpp  Entity.cpp  FireChargeItem.cpp  FireTile.cpp  Ghast.cpp  Giant.cpp  GiveItemCommand.cpp  GrassTile.cpp  Hasher.cpp  Inventory.cpp  LavaSlime.cpp  Layer.cpp  LeafTile.cpp  Level.cpp  (+62 more)
Minecraft.World/x64headers/: extraX64.h  xsocialpost.h
cmake/: ServerSources.cmake  Sources.cmake
(+54 files in other folders)
